maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:18: error: '<-' expected but ')' found.
  for (y<0 to getMondeHauteur()-1){
                                 ^JediEscaper:23: error: illegal start of simple expression
}
^